[gd_scene load_steps=9 format=3 uid="uid://ccwe1x1twpvd1"]

[ext_resource type="Texture2D" uid="uid://8exoy2rn044a" path="res://Resources/UI_icon/d12_outline.png" id="1_cr047"]
[ext_resource type="Script" path="res://Scripts/start_wave_button.gd" id="2_er4t7"]
[ext_resource type="Texture2D" uid="uid://cl6wixiq738p2" path="res://Resources/UI_icon/d12.png" id="3_q2a1l"]
[ext_resource type="Texture2D" uid="uid://bvsrvgimwvv4u" path="res://Resources/light_circle.png" id="3_ti7qf"]
[ext_resource type="Texture2D" uid="uid://dwid2idpwjikd" path="res://Resources/UI_icon/skull.png" id="4_0t3td"]

[sub_resource type="Animation" id="Animation_wa2ob"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}

[sub_resource type="Animation" id="Animation_x14nw"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_surr4"]
_data = {
"RESET": SubResource("Animation_wa2ob"),
"new_animation": SubResource("Animation_x14nw")
}

[node name="StartWaveButton" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1.2, 1.2)
script = ExtResource("2_er4t7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "new_animation"
libraries = {
"": SubResource("AnimationLibrary_surr4")
}

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-20, -20)
step = 0.01
value = 100.0
fill_mode = 5
nine_patch_stretch = true
texture_under = ExtResource("1_cr047")
texture_progress = ExtResource("1_cr047")
tint_under = Color(0.415686, 0.415686, 0.415686, 1)
tint_progress = Color(0.584314, 0, 0, 1)

[node name="Highlight" type="TextureRect" parent="TextureProgressBar"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ti7qf")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="TextureProgressBar"]
modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_q2a1l")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="TextureProgressBar"]
self_modulate = Color(0.490196, 0.32549, 0.152941, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_0t3td")
expand_mode = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
